Progress with testing

--- a/eng/tools/lint-diff/package.json
+++ b/eng/tools/lint-diff/package.json
@@ -13,6 +13,7 @@
     "node": ">= 18.0.0"
   },
   "dependencies": {
+    "@apidevtools/json-schema-ref-parser":"^9.0.9",
     "@azure-tools/openapi-tools-common": "^1.2.2",
     "@azure/openapi-markdown": "^0.9.4",
     "@microsoft.azure/openapi-validator": "2.2.3",
@@ -23,6 +24,7 @@
     "@types/node": "^18.19.31",
     "@vitest/coverage-v8": "^3.0.2",
     "execa": "^9.5.2",
+    "memfs": "^4.17.0",
     "typescript": "~5.6.2",
     "vitest": "^3.0.2"
   }
