--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -85,6 +85,12 @@
 # PRLabel: %Container Service
 /specification/containerservice/ @palma21 @weinong @seguler @alvinli222 @justindavies @matthchr @robbiezhang @paulgmiller @yizhang4321 @circy9 @qike-ms
 
+# PRLabel: %Container Service Fleet
+/specification/containerservice/**/fleet @sjwaight @circy9 @serbrech @jim-minter @nwnt @matthchr
+
+# PRLabel: %Container Service Fleet
+/specification/containerservice/Fleet.Management @sjwaight @circy9 @serbrech @jim-minter @nwnt @matthchr
+
 # PRLabel: %Cosmos
 /specification/cosmos-db/ @pjohari-ms @MehaKaushik
 
