add linter in config file

--- a/specification/agricultureplatform/data-plane/tspconfig.yaml
+++ b/specification/agricultureplatform/data-plane/tspconfig.yaml
@@ -3,9 +3,9 @@ parameters:
     default: "sdk/agricultureplatform"
 emit:
   - "@azure-tools/typespec-autorest"
-# linter:
-#   extends:
-#     - "@azure-tools/typespec-azure-rulesets/data-plane"
+linter:
+  extends:
+    - "@azure-tools/typespec-azure-rulesets/data-plane"
 
 options:
   "@azure-tools/typespec-autorest":
