Update CODEOWNERS for Container Service Fleet
remove users who don't have the appropriate permissions

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -86,10 +86,10 @@
 /specification/containerservice/ @palma21 @weinong @seguler @alvinli222 @justindavies @matthchr @robbiezhang @paulgmiller @yizhang4321 @circy9 @qike-ms
 
 # PRLabel: %Container Service Fleet
-/specification/containerservice/**/fleet @sjwaight @circy9 @serbrech @jim-minter @nwnt @matthchr
+/specification/containerservice/**/fleet @circy9 @serbrech @jim-minter @matthchr
 
 # PRLabel: %Container Service Fleet
-/specification/containerservice/Fleet.Management @sjwaight @circy9 @serbrech @jim-minter @nwnt @matthchr
+/specification/containerservice/Fleet.Management @circy9 @serbrech @jim-minter @matthchr
 
 # PRLabel: %Cosmos
 /specification/cosmos-db/ @pjohari-ms @MehaKaushik
