--- a/.github/actions/setup-node-install-deps/action.yaml
+++ b/.github/actions/setup-node-install-deps/action.yaml
@@ -7,7 +7,7 @@ inputs:
     default: 22.x
   install-command:
     description: 'Command to install dependencies'
-    default: 'npm i --no-package-lock --force'
+    default: 'npm ci'
   working-directory:
     description: 'Working directory'
     default: '.'
