--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -86,7 +86,7 @@
 /specification/containerservice/ @palma21 @weinong @seguler @alvinli222 @justindavies @matthchr @robbiezhang @paulgmiller @yizhang4321 @circy9 @qike-ms
 
 # PRLabel: %Container Service Fleet
-/specification/containerservice/**/fleet @circy9 @serbrech @jim-minter @matthchr
+/specification/containerservice/**/fleet/** @circy9 @serbrech @jim-minter @matthchr
 
 # PRLabel: %Container Service Fleet
 /specification/containerservice/Fleet.Management @circy9 @serbrech @jim-minter @matthchr
