--- a/specification/standbypool/StandbyPool.Management/sdk-suppressions.yaml
+++ b/specification/standbypool/StandbyPool.Management/sdk-suppressions.yaml
@@ -6,3 +6,9 @@ suppressions:
       - Enum KnownOrigin no longer has value User
       - Enum KnownOrigin no longer has value UserSystem
       - Enum KnownRefillPolicy no longer has value Always
+  azure-sdk-for-go:
+    - package: sdk/resourcemanager/standbypool/armstandbypool
+      breaking-changes:
+        - Struct `PoolResourceStateCount` has been removed
+        - Type of `ContainerGroupInstanceCountSummary.InstanceCountsByState` has been changed from `[]*PoolResourceStateCount` to `[]*PoolContainerGroupStateCount`
+        - Type of `VirtualMachineInstanceCountSummary.InstanceCountsByState` has been changed from `[]*PoolResourceStateCount` to `[]*PoolVirtualMachineStateCount`
