--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -89,7 +89,7 @@
 /specification/containerservice/**/fleet/ @circy9 @serbrech @jim-minter @matthchr
 
 # PRLabel: %Container Service Fleet
-/specification/containerservice/Fleet.Management @circy9 @serbrech @jim-minter @matthchr
+/specification/containerservice/Fleet.Management/ @circy9 @serbrech @jim-minter @matthchr
 
 # PRLabel: %Cosmos
 /specification/cosmos-db/ @pjohari-ms @MehaKaushik
