--- a/specification/marketplacecatalog/Reviews.Managment/tspconfig.yaml
+++ b/specification/marketplacecatalog/Reviews.Managment/tspconfig.yaml
@@ -5,7 +5,7 @@ options:
     use-read-only-status-schema: true
     emitter-output-dir: "{project-root}/.."
     azure-resource-provider-folder: "resource-manager"
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
+    output-file: "{azure-resource-provider-folder}/Reviews/{version-status}/{version}/reviews.json"
   "@azure-tools/typespec-csharp":
     package-dir: "Azure.ResourceManager.Marketplace"
     clear-output-folder: true
