Update example and fix issue

--- a/specification/cognitiveservices/resource-manager/Microsoft.CognitiveServices/preview/2025-04-01-preview/examples/CreateProjectMin.json
+++ b/specification/cognitiveservices/resource-manager/Microsoft.CognitiveServices/preview/2025-04-01-preview/examples/CreateProjectMin.json
@@ -5,7 +5,7 @@
     "resourceGroupName": "myResourceGroup",
     "accountName": "testCreate1",
     "projectName": "testProject1",
-    "account": {
+    "project": {
       "location": "West US",
       "kind": "CognitiveServices",
       "sku": {
