--- a/specification/cognitiveservices/resource-manager/Microsoft.CognitiveServices/preview/2025-04-01-preview/examples/UpdateProjects.json
+++ b/specification/cognitiveservices/resource-manager/Microsoft.CognitiveServices/preview/2025-04-01-preview/examples/UpdateProjects.json
@@ -5,7 +5,7 @@
     "resourceGroupName": "bvttest",
     "accountName": "bingSearch",
     "projectName": "projectName",
-    "account": {
+    "project": {
       "location": "global",
       "sku": {
         "name": "S2"
