--- a/specification/network/resource-manager/Microsoft.Network/stable/2024-07-01/examples/NetworkManagerConnectivityConfigurationPut.json
+++ b/specification/network/resource-manager/Microsoft.Network/stable/2024-07-01/examples/NetworkManagerConnectivityConfigurationPut.json
@@ -26,13 +26,11 @@
             "isGlobal": "False"
           }
         ],
-        "connectivityCapabilities": [
-          {
-            "connectedGroupPrivateEndpointScale": "Standard",
-            "connectedGroupAddressOverlap": "Allowed",
-            "peeringEnforcement": "Unenforced"
-          }
-        ]
+        "connectivityCapabilities": {
+          "connectedGroupPrivateEndpointScale": "Standard",
+          "connectedGroupAddressOverlap": "Allowed",
+          "peeringEnforcement": "Unenforced"
+        }
       }
     }
   },
