--- a/specification/app/Microsoft.App.DynamicSessions/tspconfig.yaml
+++ b/specification/app/Microsoft.App.DynamicSessions/tspconfig.yaml
@@ -12,18 +12,18 @@ options:
     emitter-output-dir: "{project-root}/.."
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/DynamicSessions.json"
   "@azure-tools/typespec-python":
-    package-dir: "microsoft-app-dynamicsessions"
+    package-dir: "azure-microsoft-app-dynamicsessions"
     package-name: "{package-dir}"
     package-mode: dataplane
     flavor: azure
   "@azure-tools/typespec-csharp":
-    package-dir: "Microsoft.App.DynamicSessions"
+    package-dir: "Azure.Microsoft.App.DynamicSessions"
     namespace: "{package-dir}"
     clear-output-folder: true
     model-namespace: false
     flavor: azure
   "@azure-tools/typespec-ts":
-    package-dir: "microsoft-app-dynamicsessions-rest"
+    package-dir: "azure-microsoft-app-dynamicsessions-rest"
     generateMetadata: true
     generateTest: true
     packageDetails:
@@ -31,7 +31,7 @@ options:
       description: "Microsoft.App Dynamic Sessions Service"
     flavor: azure
   "@azure-tools/typespec-java":
-    package-dir: "microsoft-app-dynamicsessions"
+    package-dir: "azure-microsoft-app-dynamicsessions"
     namespace: com.microsoft.app.dynamicsessions
     flavor: azure
 linter:
