fix tspconfig errors

--- a/specification/app/Microsoft.App.DynamicSessions/tspconfig.yaml
+++ b/specification/app/Microsoft.App.DynamicSessions/tspconfig.yaml
@@ -17,7 +17,7 @@ options:
     package-mode: dataplane
     flavor: azure
   "@azure-tools/typespec-csharp":
-    package-dir: "Microsoft.App.DynamicSessions"
+    package-dir: "Azure.Microsoft.App.DynamicSessions"
     namespace: "{package-dir}"
     clear-output-folder: true
     model-namespace: false
@@ -31,7 +31,7 @@ options:
       description: "Microsoft.App Dynamic Sessions Service"
     flavor: azure
   "@azure-tools/typespec-java":
-    package-dir: "microsoft-app-dynamicsessions"
+    package-dir: "azure-microsoft-app-dynamicsessions"
     namespace: com.microsoft.app.dynamicsessions
     flavor: azure
 linter:
