--- a/specification/standbypool/StandbyPool.Management/sdk-suppressions.yaml
+++ b/specification/standbypool/StandbyPool.Management/sdk-suppressions.yaml
@@ -6,6 +6,8 @@ suppressions:
       - Enum KnownOrigin no longer has value User
       - Enum KnownOrigin no longer has value UserSystem
       - Enum KnownRefillPolicy no longer has value Always
+      - Type of parameter instanceCountsByState of interface ContainerGroupInstanceCountSummary is changed from PoolResourceStateCount[] to PoolContainerGroupStateCount[]
+      - Type of parameter instanceCountsByState of interface VirtualMachineInstanceCountSummary is changed from PoolResourceStateCount[] to PoolVirtualMachineStateCount[]
   azure-sdk-for-go:
     - package: sdk/resourcemanager/standbypool/armstandbypool
       breaking-changes:
