.NET package-dir

--- a/specification/informatica/Informatica.DataManagement.Management/tspconfig.yaml
+++ b/specification/informatica/Informatica.DataManagement.Management/tspconfig.yaml
@@ -22,6 +22,7 @@ options:
     flavor: "azure"
     service-name: "Informatica DataManagement"
   "@azure-tools/typespec-csharp":
+    package-dir: Azure.ResourceManager.InformaticaDataManagement
     flavor: azure
     clear-output-folder: true
     namespace: "Azure.ResourceManager.InformaticaDataManagement"
