[suppressions] Rename "rule" to "rules"

--- a/eng/tools/suppressions/test/e2e/subRuleSuppressionsYaml/suppressions.yaml
+++ b/eng/tools/suppressions/test/e2e/subRuleSuppressionsYaml/suppressions.yaml
@@ -1,6 +1,5 @@
 - tool: TypeSpecValidation
-  rule: SdkTspConfigValidation
-  path: .
-  sub-rules:
-    - parameters.service-dir.default
+  paths: ["foo.json"]
+  rules: [SdkTspConfigValidation]
+  sub-rules: [parameters.service-dir.default]
   reason: test
