--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2024-06-01/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2024-06-01/appconfiguration.json
@@ -912,7 +912,7 @@
             "name": "keyValueParameters",
             "in": "body",
             "description": "The parameters for creating a key-value.",
-            "required": false,
+            "required": true,
             "schema": {
               "$ref": "#/definitions/KeyValue"
             }
