Specify required false

--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/appconfiguration.json
@@ -1606,6 +1606,7 @@
             "name": "experimentationCreationParameters",
             "in": "body",
             "description": "The parameters for creating the experimentation.",
+            "required": false,
             "schema": {
               "$ref": "#/definitions/Experimentation"
             }
