--- a/eng/tools/lint-diff/package.json
+++ b/eng/tools/lint-diff/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "type": "module",
   "main": "dist/src/lint-diff.js",
+  "bin": {
+    "lint-diff": "cmd/lint-diff.js"
+  },
   "scripts": {
     "build": "tsc --build",
     "test": "vitest",
