--- a/specification/keyvault/Security.KeyVault.Administration/examples/7.6-preview.2/PutRoleAssignments-example.json
+++ b/specification/keyvault/Security.KeyVault.Administration/examples/7.6-preview.2/PutRoleAssignments-example.json
@@ -8,7 +8,7 @@
     "parameters": {
       "properties": {
         "roleDefinitionId": "/keys/providers/Microsoft.Authorization/roleDefinitions/roleDefinitionId",
-        "principalId": "principalId"
+        "principalId": "00000000-0000-0000-0000-000000000000"
       }
     },
     "api-version": "7.6-preview.2"
@@ -18,7 +18,7 @@
       "body": {
         "properties": {
           "roleDefinitionId": "/keys/providers/Microsoft.Authorization/roleDefinitions/roleDefinitionId",
-          "principalId": "principalId",
+          "principalId": "00000000-0000-0000-0000-000000000000",
           "scope": "/keys"
         },
         "id": "/keys/providers/Microsoft.Authorization/roleAssignments/roleAssignmentId",
