--- a/specification/storage/Storage.Management/tspconfig.yaml
+++ b/specification/storage/Storage.Management/tspconfig.yaml
@@ -11,10 +11,9 @@ options:
     arm-resource-flattening: true
   "@azure-tools/typespec-csharp":
     flavor: "azure"
-    namespace: "Azure.ResourceManager.Storage"
+    namespace: "Azure.ResourceManager.KeyVault"
     clear-output-folder: true
     examples-dir: "{project-root}/examples"
-    package-dir: "Azure.ResourceManager.Storage"
  
 linter:
   extends:
