sdk automation, fix TypeSpec java config

--- a/specification/cognitiveservices/AnomalyDetector/tspconfig.yaml
+++ b/specification/cognitiveservices/AnomalyDetector/tspconfig.yaml
@@ -5,7 +5,7 @@ parameters:
     default: "{project-root}/azure-sdk-for-js/"
   "csharp-sdk-folder":
     default: "{project-root}/azure-sdk-for-net/"
-  "service-directory-name":
+  "service-dir":
     default: "anomalydetector"
 emit:
   - "@azure-tools/typespec-autorest"
