--- a/specification/agricultureplatform/cspell.yaml
+++ b/specification/agricultureplatform/cspell.yaml
@@ -13,3 +13,9 @@ words:
   - stac
   - STAC
   - Stac
+  - agri
+  - mobo
+overrides:
+  - filename: '**/specification/agricultureplatform/resource-manager/readme.md'
+    words:
+      - agricultureplatform
