Updated provisioningState on LZC 201.

--- a/specification/sovereign/Sovereign.Management/examples/2025-02-27-preview/LandingZoneConfigurationOperations_Create.json
+++ b/specification/sovereign/Sovereign.Management/examples/2025-02-27-preview/LandingZoneConfigurationOperations_Create.json
@@ -414,7 +414,7 @@
       },
       "body": {
         "properties": {
-          "provisioningState": "Succeeded",
+          "provisioningState": "Accepted",
           "authoringStatus": "Authoring",
           "ddosProtectionCreationOption": "UseExisting",
           "existingDdosProtectionId": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-examplegroup/providers/Microsoft.Network/ddosProtectionPlans/ddos-example",
