set user and email

--- a/.github/workflows/typespec-validation-all.yaml
+++ b/.github/workflows/typespec-validation-all.yaml
@@ -74,7 +74,7 @@ jobs:
         run: git fetch origin main --depth=1 # Fetch only the latest commit from main
 
       - name: git rebase origin/main
-        run: git rebase -Xtheirs origin/main
+        run:  git -c user.name="azure-sdk" -c user.email="azuresdk@microsoft.com" rebase -Xtheirs origin/main
 
       - name: Setup Node and install deps
         uses: ./.github/actions/setup-node-install-deps
