--- a/.github/workflows/typespec-validation-all.yaml
+++ b/.github/workflows/typespec-validation-all.yaml
@@ -67,14 +67,11 @@ jobs:
         with:
           # Convert placeholder string 'default' to '', which tells the action to checkout the default ref.
           ref: ${{ matrix.ref == 'next' && 'typespec-next' || '' }}
-          # Checkout all history for all branches.  Required to merge origin/main.
-          fetch-depth: 1
-
-      - name: Fetch main branch
-        run: git fetch origin main --depth=1 # Fetch only the latest commit from main
 
       - name: git rebase origin/main
-        run:  git -c user.name="azure-sdk" -c user.email="azuresdk@microsoft.com" rebase -Xtheirs origin/main
+        run: |
+          git fetch origin main --depth=1
+          git -c user.name="azure-sdk" -c user.email="azuresdk@microsoft.com" rebase -Xtheirs origin/main
 
       - name: Setup Node and install deps
         uses: ./.github/actions/setup-node-install-deps
