--- a/.github/workflows/typespec-validation.yaml
+++ b/.github/workflows/typespec-validation.yaml
@@ -15,7 +15,7 @@ jobs:
 
       - name: git rebase origin/main
         run:  |
-          git fetch origin/main
+          git fetch origin main --depth=1
           git -c user.name="azure-sdk" -c user.email="azuresdk@microsoft.com" rebase -Xtheirs origin/main
 
       - name: Setup Node and install deps
