Update property name

--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2024-06-01/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2024-06-01/appconfiguration.json
@@ -1621,10 +1621,10 @@
           "default": 7,
           "description": "The amount of time in days that the configuration store will be retained when it is soft deleted."
         },
-        "revisionRetentionPeriodInSeconds": {
+        "defaultKeyValueRevisionRetentionPeriodInSeconds": {
           "type": "integer",
           "format": "int64",
-          "description": "The duration in seconds to retain new key value revisions. This is also the default duration a snapshot remains archived before expiring if 'retentionPeriod' is not set during snapshot creation. Defaults to 604800 (7 days) for Free SKU stores and 2592000 (30 days) for Standard SKU stores and Premium SKU stores."
+          "description": "The duration in seconds to retain new key value revisions. Defaults to 604800 (7 days) for Free SKU stores and 2592000 (30 days) for Standard SKU stores and Premium SKU stores."
         },
         "enablePurgeProtection": {
           "type": "boolean",
@@ -1810,10 +1810,10 @@
           "$ref": "#/definitions/DataPlaneProxyProperties",
           "description": "Property specifying the configuration of data plane proxy for Azure Resource Manager (ARM)."
         },
-        "revisionRetentionPeriodInSeconds": {
+        "defaultKeyValueRevisionRetentionPeriodInSeconds": {
           "type": "integer",
           "format": "int64",
-          "description": "The duration in seconds to retain new key value revisions. This is also the default duration a snapshot remains archived before expiring if 'retentionPeriod' is not set during snapshot creation. Defaults to 604800 (7 days) for Free SKU stores and 2592000 (30 days) for Standard SKU stores and Premium SKU stores."
+          "description": "The duration in seconds to retain new key value revisions. Defaults to 604800 (7 days) for Free SKU stores and 2592000 (30 days) for Standard SKU stores and Premium SKU stores."
         }
       }
     },
