--- a/specification/cognitiveservices/AnomalyDetector/tspconfig.yaml
+++ b/specification/cognitiveservices/AnomalyDetector/tspconfig.yaml
@@ -6,7 +6,7 @@ parameters:
   "csharp-sdk-folder":
     default: "{project-root}/azure-sdk-for-net/"
   "service-dir":
-    default: "anomalydetector"
+    default: "sdk/anomalydetector"
 emit:
   - "@azure-tools/typespec-autorest"
 linter:
