--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "azure-rest-api-specs",
   "devDependencies": {
     "@azure-tools/typespec-apiview": "0.5.1",
-    "@autorest/openapi-to-typespec": "0.10.11",
     "@azure-tools/typespec-autorest": "0.51.0",
     "@azure-tools/typespec-azure-core": "0.51.0",
     "@azure-tools/typespec-azure-portal-core": "0.51.0",
@@ -12,6 +11,7 @@
     "@azure-tools/typespec-client-generator-core": "0.51.3",
     "@azure-tools/typespec-liftr-base": "0.8.0",
     "@azure/avocado": "^0.9.1",
+    "@autorest/openapi-to-typespec": "0.10.11",
     "@typespec/compiler": "0.65.3",
     "@typespec/http": "0.65.0",
     "@typespec/openapi": "0.65.0",
@@ -24,8 +24,7 @@
     "azure-rest-api-specs-eng-tools": "file:eng/tools",
     "oav": "^3.5.1",
     "prettier": "~3.3.3",
-    "typescript": "~5.6.2",
-    "vitest": "^3.0.7"
+    "typescript": "~5.6.2"
   },
   "engines": {
     "node": ">=18.0.0",
