--- a/.github/workflows/lintdiff.yaml
+++ b/.github/workflows/lintdiff.yaml
@@ -43,12 +43,8 @@ jobs:
           Get-Content ../changed-files.txt
         shell: pwsh
 
-      - name: Run LintDiff Before
+      - name: Run LintDiff
         run: |
-          pwd
-          ls -lh
-          realpath before
-          realpath changed-files.txt
           npm exec --no -- lint-diff \
             --before before \
             --after after \
