Hoist @microsoft.azure/openapi-validator into higher level package.json to get around unmet dependency problem, update package-lock.json, cleanup lintdiff.yaml

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typespec/streams": "0.65.0",
     "@typespec/versioning": "0.65.0",
     "@typespec/xml": "0.65.0",
+    "@microsoft.azure/openapi-validator": "2.2.3",
     "azure-rest-api-specs-eng-tools": "file:eng/tools",
     "oav": "^3.5.1",
     "prettier": "~3.3.3",
