--- a/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/tspconfig.yaml
+++ b/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/tspconfig.yaml
@@ -12,6 +12,25 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/servicefabricmanagedclusters.json"
     examples-dir: "{project-root}/examples"
     emit-lro-options: "all"
+  "@azure-tools/typespec-python":
+    package-dir: "azure-mgmt-servicefabricmanagedclusters"
+    package-name: "{package-dir}"
+    generate-test: true
+    generate-sample: true
+    flavor: azure
+  "@azure-tools/typespec-ts":
+    package-dir: "arm-servicefabricmanagedclusters"
+    packageDetails:
+      name: "@azure/arm-servicefabricmanagedclusters"
+    flavor: azure
+  "@azure-tools/typespec-go":
+    service-dir: "sdk/resourcemanager/servicefabricmanagedclusters"
+    package-dir: "armservicefabricmanagedclusters"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+  "@azure-tools/typespec-java":
+    package-dir: "azure-resourcemanager-servicefabricmanagedclusters"
+    namespace: com.azure.resourcemanager.servicefabricmanagedclusters
+    flavor: azure
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
