--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@typespec/versioning": "0.65.0",
     "@typespec/xml": "0.65.0",
     "azure-rest-api-specs-eng-tools": "file:eng/tools",
+    "cross-env": "^7.0.3",
     "oav": "^3.5.1",
     "prettier": "~3.3.3",
     "typescript": "~5.6.2"
+  },
+  "scripts": {
+    "postinstall": "cross-env-shell 'if [ \"$OS\" = \"Windows_NT\" ]; then powershell -c \"irm typespec.io/install.ps1|iex\"; else curl -fsSL https://typespec.io/install.sh | bash; fi'"
   },
   "engines": {
     "node": ">=18.0.0",
