--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "typescript": "~5.6.2"
   },
   "scripts": {
-    "postinstall": "cross-env-shell 'if [ \"$OS\" = \"Windows_NT\" ]; then powershell -c \"irm typespec.io/install.ps1|iex\"; else curl -fsSL https://typespec.io/install.sh | bash; fi'"
+    "postinstall": "curl -fsSL https://typespec.io/install.sh | bash"
   },
   "engines": {
     "node": ">=18.0.0",
