--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "azure-rest-api-specs",
   "devDependencies": {
-    "@azure-tools/typespec-autorest": "next",
-    "@azure-tools/typespec-azure-core": "next",
-    "@azure-tools/typespec-azure-portal-core": "next",
-    "@azure-tools/typespec-azure-resource-manager": "next",
-    "@azure-tools/typespec-azure-rulesets": "next",
-    "@azure-tools/typespec-client-generator-core": "next",
+    "@azure-tools/typespec-apiview": "0.5.1",
+    "@azure-tools/typespec-autorest": "0.51.0",
+    "@azure-tools/typespec-azure-core": "0.51.0",
+    "@azure-tools/typespec-azure-portal-core": "0.51.0",
+    "@azure-tools/typespec-azure-resource-manager": "0.51.0",
+    "@azure-tools/typespec-azure-rulesets": "0.51.0",
+    "@azure-tools/typespec-client-generator-cli": "0.15.3",
+    "@azure-tools/typespec-client-generator-core": "0.51.3",
     "@azure-tools/typespec-liftr-base": "0.8.0",
     "@azure/avocado": "^0.9.1",
-    "@typespec/compiler": "next",
-    "@typespec/http": "next",
-    "@typespec/openapi": "next",
-    "@typespec/openapi3": "next",
-    "@typespec/prettier-plugin-typespec": "next",
-    "@typespec/rest": "next",
-    "@typespec/streams": "next",
-    "@typespec/versioning": "next",
-    "@typespec/xml": "next",
+    "@autorest/openapi-to-typespec": "0.10.11",
+    "@typespec/compiler": "0.65.3",
+    "@typespec/http": "0.65.0",
+    "@typespec/openapi": "0.65.0",
+    "@typespec/openapi3": "0.65.0",
+    "@typespec/prettier-plugin-typespec": "0.65.0",
+    "@typespec/rest": "0.65.0",
+    "@typespec/streams": "0.65.0",
+    "@typespec/versioning": "0.65.0",
+    "@typespec/xml": "0.65.0",
     "azure-rest-api-specs-eng-tools": "file:eng/tools",
     "oav": "^3.5.1",
     "prettier": "~3.3.3",
