--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "typescript": "~5.6.2"
   },
   "scripts": {
-    "postinstall": "curl -fsSL https://typespec.io/install.sh | bash -s -- --release 0.64.0"
+    "preinstall": "curl -fsSL https://typespec.io/install.sh | bash -s -- --release 0.64.0"
   },
   "engines": {
     "node": ">=18.0.0",
