--- a/eng/pipelines/typespec-apiview.yml
+++ b/eng/pipelines/typespec-apiview.yml
@@ -20,6 +20,7 @@ jobs:
   - checkout: self
     fetchDepth: 0
 
+  # TODO: Refactor into shared template used by all pipelines
   - task: NodeTool@0
     inputs:
       versionSpec: 22.x
