--- a/eng/pipelines/typespec-apiview.yml
+++ b/eng/pipelines/typespec-apiview.yml
@@ -20,11 +20,8 @@ jobs:
   - checkout: self
     fetchDepth: 0
 
-  # TODO: Refactor into shared template used by all pipelines
-  - task: NodeTool@0
-    inputs:
-      versionSpec: 22.x
-    displayName: "Use Node 22.x"
+  - template: /eng/pipelines/templates/steps/node-tool.yml
+
 
   - pwsh: |
       . $(Build.SourcesDirectory)/eng/scripts/Create-APIView.ps1
