--- a/eng/pipelines/templates/steps/npm-install.yml
+++ b/eng/pipelines/templates/steps/npm-install.yml
@@ -11,7 +11,7 @@ steps:
   - script: npm ci
     displayName: npm ci
 
-  - script: npm ls -a
+  - script: npm ls -a || true
     displayName: npm ls -a
     condition: succeededOrFailed()
     continueOnError: true
