--- a/specification/marketplacecatalog/Reviews.Management/tspconfig.yaml
+++ b/specification/marketplacecatalog/Reviews.Management/tspconfig.yaml
@@ -11,34 +11,7 @@ options:
     clear-output-folder: true
     model-namespace: false
     namespace: "{package-dir}"
-  "@azure-tools/typespec-python":
-    package-dir: "azure-mgmt-marketplace"
-    package-name: "{package-dir}"
-    generate-test: true
-    generate-sample: true
-  "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-marketplace"
-    namespace: "com.azure.resourcemanager.marketplace"
-    service-name: "marketplace"
-  "@azure-tools/typespec-ts":
-    package-dir: "arm-marketplace"
-    azureSdkForJs: true
-    isModularLibrary: true
-    generateMetadata: true
-    hierarchyClient: false
-    experimentalExtensibleEnums: true
-    enableOperationGroup: true
-    packageDetails:
-      name: "@azure/{package-dir}"
-  "@azure-tools/typespec-go":
-    service-dir: "sdk/resourcemanager/marketplace"
-    package-dir: "armmarketplace"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
-    fix-const-stuttering: true
-    generate-examples: true
-    generate-fakes: true
-    head-as-boolean: true
-    inject-spans: true
+    flavor: azure
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
