--- a/specification/manufacturingdatasolution/ManufacturingDataSolution.Copilot/tspconfig.yaml
+++ b/specification/manufacturingdatasolution/ManufacturingDataSolution.Copilot/tspconfig.yaml
@@ -2,7 +2,7 @@ parameters:
   "service-dir":
     default: "sdk/manufacturingdatasolution"
   "service-name":
-    default: "Microsoft.Industries.ManufacturingDataSolution"
+    default: "Microsoft.Industries.ManufacturingDataSolution.Copilot"
 emit:
   - "@azure-tools/typespec-autorest"
 options:
