--- a/specification/manufacturingdatasolution/ManufacturingDataSolution.Copilot/tspconfig.yaml
+++ b/specification/manufacturingdatasolution/ManufacturingDataSolution.Copilot/tspconfig.yaml
@@ -17,7 +17,7 @@ options:
     package-mode: dataplane
     flavor: azure
   "@azure-tools/typespec-csharp":
-    package-dir: "Microsoft.Industry.Manufacturing.MDS.Copilot"
+    package-dir: "Azure.Microsoft.Industry.Manufacturing.MDS.Copilot"
     namespace: "{package-dir}"
     clear-output-folder: true
     model-namespace: false
