--- a/specification/manufacturingdatasolution/ManufacturingDataSolution.Copilot/tspconfig.yaml
+++ b/specification/manufacturingdatasolution/ManufacturingDataSolution.Copilot/tspconfig.yaml
@@ -12,18 +12,18 @@ options:
     omit-unreachable-types: true
     output-file: "./data-plane/{service-name}/{version-status}/{version}/openapi.json"
   "@azure-tools/typespec-python":
-    package-dir: "microsoft-industry-manufacturing-mds-copilot"
+    package-dir: "microsoft-industries-manufacturingdatasolution-copilot"
     package-name: "{package-dir}"
     package-mode: dataplane
     flavor: azure
   "@azure-tools/typespec-csharp":
-    package-dir: "Azure.Microsoft.Industry.Manufacturing.MDS.Copilot"
+    package-dir: "Azure.Microsoft.Industries.ManufacturingDataSolution.Copilot"
     namespace: "{package-dir}"
     clear-output-folder: true
     model-namespace: false
     flavor: azure
   "@azure-tools/typespec-ts":
-    package-dir: "microsoft-industry-manufacturing-mds-copilot"
+    package-dir: "microsoft-industries-manufacturingdatasolution-copilot"
     generateMetadata: true
     generateTest: true
     packageDetails:
@@ -31,8 +31,8 @@ options:
       description: "Microsoft.Industry.Manufacturing.MDS.Copilot"
     flavor: azure
   "@azure-tools/typespec-java":
-    package-dir: "microsoft-industry-manufacturing-mds-copilot"
-    namespace: "com.microsoft.industry.manufacturing.mds.copilot"
+    package-dir: "azure-microsoft-industry-manufacturing-mds-copilot"
+    namespace: "com.azure.microsoft.industry.manufacturing.mds.copilot"
     flavor: azure
 linter:
   extends:
