Add required config for GO generation

--- a/specification/cognitiveservices/Speech.SpeechToText/tspconfig.yaml
+++ b/specification/cognitiveservices/Speech.SpeechToText/tspconfig.yaml
@@ -40,3 +40,10 @@ options:
     flavor: azure
     generate-test: true
     generate-sample: true
+  "@azure-tools/typespec-go":
+    service-dir: "sdk/ai/azspeechtotexttranscription"
+    package-dir: "azspeechtotexttranscription"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    flavor: "azure"
+    generate-fakes: true
+    inject-spans: true
